Bug 254681 - netstat -rs: routing statistics no longer works due to rttrash: symbol not in namelist
Summary: netstat -rs: routing statistics no longer works due to rttrash: symbol not in...
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 13.0-STABLE
Hardware: amd64 Any
: --- Affects Some People
Assignee: Alexander V. Chernikov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-31 17:49 UTC by rashey
Modified: 2021-04-04 19:29 UTC (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rashey 2021-03-31 17:49:29 UTC
Hi,

Routing statistics no longer works.

# netstat -rs
rttrash: symbol not in namelist

# freebsd-version
13.0-RC4
Comment 1 commit-hook freebsd_committer freebsd_triage 2021-03-31 20:59:49 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=4084b1ab0413d15dab496b1c24c3875601c71438

commit 4084b1ab0413d15dab496b1c24c3875601c71438
Author:     Alexander V. Chernikov <melifaro@FreeBSD.org>
AuthorDate: 2021-03-31 20:56:26 +0000
Commit:     Alexander V. Chernikov <melifaro@FreeBSD.org>
CommitDate: 2021-03-31 20:59:10 +0000

    Fix `netstat -rs` reporting.

    rttrash (unused but not yet delete entries) were eliminated
     during routing rework. Remove reading these symbols from the kernel.

    PR:             254681
    Reported by:    rashey@superbox.pl
    MFC after:      immediately

 usr.bin/netstat/nlist_symbols |  1 -
 usr.bin/netstat/route.c       | 13 +------------
 2 files changed, 1 insertion(+), 13 deletions(-)
Comment 2 commit-hook freebsd_committer freebsd_triage 2021-04-04 08:45:29 UTC
A commit in branch stable/13 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=1260724822b5830411cbf56d48e997be1628e53b

commit 1260724822b5830411cbf56d48e997be1628e53b
Author:     Alexander V. Chernikov <melifaro@FreeBSD.org>
AuthorDate: 2021-03-31 20:56:26 +0000
Commit:     Alexander V. Chernikov <melifaro@FreeBSD.org>
CommitDate: 2021-04-04 08:44:01 +0000

    Fix `netstat -rs` reporting.

    rttrash (unused but not yet delete entries) were eliminated
     during routing rework. Remove reading these symbols from the kernel.

    PR:             254681
    Reported by:    rashey@superbox.pl

    (cherry picked from commit 4084b1ab0413d15dab496b1c24c3875601c71438)

 usr.bin/netstat/nlist_symbols |  1 -
 usr.bin/netstat/route.c       | 13 +------------
 2 files changed, 1 insertion(+), 13 deletions(-)
Comment 3 Alexander V. Chernikov freebsd_committer freebsd_triage 2021-04-04 08:53:50 UTC
Hi!
Thank you for submitting the bug report!
I missed that part during the route stack rework.

Does this patch fix an issue for you?
Comment 4 rashey 2021-04-04 18:50:17 UTC
Yes, it does. Thanks.