Fix `netstat -rs` reporting.

rttrash (unused but not yet delete entries) were eliminated
 during routing rework. Remove reading these symbols from the kernel.

PR:		254681
Reported by:	rashey@superbox.pl

(cherry picked from commit 4084b1ab0413d15dab496b1c24c3875601c71438)